--- a/config.yaml
+++ b/config.yaml
@@ -6,3 +6,10 @@ server:
 mongodb:
   url: "mongodb://localhost:27017/ganja"
   db: "ganja"
+
+postgresql:
+  host: localhost
+  port: 5432
+  user: postgres
+  password: dongnguyenltqb
+  db: test
